# CppHint

./: .gitignore  CMakeLists.txt  CppHint.py  LICENSE  README.md  a.out
cmake/modules/: FindLLVM.cmake  FindLibClang.cmake  FindLibClangTooling.cmake
include/: CollectDebugDataPass.h  Utils.h
lib/: CMakeLists.txt
lib/CppHinter-inst/: CMakeLists.txt  CollectDebugDataPass.cpp  Utils.cpp
lib/CppHinter-rt/: CMakeLists.txt  runtime.cpp
tests/: test1.cc  test2.cc
tools/: CMakeLists.txt
tools/CppHinter/: CMakeLists.txt  config.h.cmake  main.cpp
tools/FindVariables/: CMakeLists.txt  FindVariables.cpp
tools/FuncSign/: CMakeLists.txt  Readme.md  function_signature.cc
tools/HintRefactor/: CMakeLists.txt  HintRefactor.cpp  Makefile  README.md
